# NovaAvatar

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CONTRIBUTING.md  CONVERSATIONS.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SETUP.md  TESTING.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup_env.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker.yml  lint.yml  security.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: server.py
api/dependencies/: auth.py
api/middleware/: __init__.py  metrics_middleware.py  rate_limiter.py  sentry_middleware.py
api/routers/: __init__.py  conversations.py  health.py  metrics.py
config/: settings.py
database/: __init__.py  base.py  models.py
database/migrations/: env.py
frontend/: app.py
monitoring/prometheus/: prometheus.yml
scripts/: init-db.sql
services/: avatar_service.py  content_scraper.py  conversation_orchestrator.py  dialogue_generator.py  image_compositor.py  image_generator.py  orchestrator.py  script_generator.py  tts_service.py  video_stitcher.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_endpoints.py
tests/load/: locustfile.py
tests/unit/: __init__.py
tests/unit/services/: test_content_scraper.py  test_orchestrator.py  test_script_generator.py
